--- a/contact.html
+++ b/contact.html
@@ -961,7 +961,7 @@
                             border: 2px solid #8db29a; flex-direction: column; text-align: center; padding: 2rem;">
                     <div style="font-size: 3rem; margin-bottom: 1rem;">Localisation Maps</div>
                     <div style="font-size: 0.9rem; opacity: 0.8;">
-                        En cours de travail ...
+                        En cours de création ...
                     </div>
                 </div>
             `;
@@ -1073,6 +1073,7 @@
 </body>
 
 </html>
+
 
 
 
