--- a/sophrologue.html
+++ b/sophrologue.html
@@ -34,7 +34,7 @@
             <p class="hero-description">
                 Vous êtes submergé par les épreuves de la vie ? Renouez avec la confiance et l'estime de soi grâce à la sophrologie, en cabinet ou à votre domicile.
             </p>
-            <a href="#contact" class="cta-button">Prendre rendez-vous</a>
+            <a href="contact.html" class="cta-button">Prendre rendez-vous</a>
         </div>
     </section>
 
@@ -253,4 +253,5 @@
         });
     </script>
 </body>
+
 </html>
