--- a/parcours.html
+++ b/parcours.html
@@ -495,6 +495,7 @@
                 <li><a href="sophrologue.html">Accueil</a></li>
                 <li><a href="a_quoi_attendre.html">À quoi s'attendre</a></li>
                 <li><a href="parcours.html">Mon Parcours</a></li>
+                <li><a href="question.html">Vos Questions</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
             <div class="hamburger" id="hamburger">
@@ -704,4 +705,5 @@
         });
     </script>
 </body>
+
 </html>
