--- a/parcours.html
+++ b/parcours.html
@@ -548,7 +548,7 @@
                 </div>
                 <div class="profile-quote">
                     <p class="quote-text">Ma plus grande joie ? Voir les étoiles revenir dans vos yeux quand vous vous reconnectez à qui vous êtes vraiment.</p>
-                    <p class="quote-author">Célia Fernandes <br> Certifier pas l'Institue de Formation à la sophrologie</p>
+                    <p class="quote-author">Célia Fernandes <br> Certifier pas l'Institue de Formation à la Sophrologie</p>
                 </div>
             </div>
         </div>
@@ -707,5 +707,6 @@
 </body>
 
 </html>
+
 
 
