--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
             z-index: 1000;
             padding: 1rem 2rem;
             transition: all 0.3s ease;
-            border-bottom: 1px solid rgba(141, 178, 154, 0.2);
+            border-bottom: 1px solid rgba(186, 156, 220, 0.2);
         }
 
         .nav-container {
@@ -47,7 +47,7 @@
         .logo {
             font-size: 1.5rem;
             font-weight: 600;
-            color: #8db29a;
+            color: #b89cd6;
             text-decoration: none;
         }
 
@@ -66,7 +66,7 @@
         }
 
         .nav-links a:hover {
-            color: #8db29a;
+            color: #b89cd6;
         }
 
         .nav-links a::after {
@@ -76,7 +76,7 @@
             left: 0;
             width: 0;
             height: 2px;
-            background: linear-gradient(135deg, #8db29a, #a8d5ba);
+            background: linear-gradient(135deg, #b89cd6, #d4c5e8);
             transition: width 0.3s ease;
         }
 
@@ -94,7 +94,7 @@
         .hamburger span {
             width: 25px;
             height: 3px;
-            background: #8db29a;
+            background: #b89cd6;
             border-radius: 3px;
             transition: all 0.3s ease;
         }
@@ -102,7 +102,7 @@
         /* Hero Section */
         .hero {
             height: 50vh;
-            background: linear-gradient(135deg, rgba(141, 178, 154, 0.9), rgba(168, 213, 186, 0.8)), url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 300"><path d="M0,150 C300,100 600,200 1200,120 L1200,300 L0,300 Z" fill="rgba(255,255,255,0.1)"/><circle cx="200" cy="80" r="30" fill="rgba(255,255,255,0.08)"/><circle cx="800" cy="50" r="40" fill="rgba(255,255,255,0.06)"/></svg>');
+            background: linear-gradient(135deg, rgba(184, 156, 214, 0.9), rgba(212, 197, 232, 0.8)), url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 300"><path d="M0,150 C300,100 600,200 1200,120 L1200,300 L0,300 Z" fill="rgba(255,255,255,0.1)"/><circle cx="200" cy="80" r="30" fill="rgba(255,255,255,0.08)"/><circle cx="800" cy="50" r="40" fill="rgba(255,255,255,0.06)"/></svg>');
             background-size: cover;
             background-position: center;
             display: flex;
@@ -144,9 +144,9 @@
             text-align: center;
             margin-bottom: 4rem;
             padding: 3rem;
-            background: linear-gradient(135deg, rgba(141, 178, 154, 0.1), rgba(168, 213, 186, 0.05));
+            background: linear-gradient(135deg, rgba(184, 156, 214, 0.1), rgba(212, 197, 232, 0.05));
             border-radius: 20px;
-            border-left: 5px solid #8db29a;
+            border-left: 5px solid #b89cd6;
         }
 
         .contact-intro h2 {
@@ -201,15 +201,15 @@
         }
 
         .contact-item:hover {
-            background: rgba(141, 178, 154, 0.1);
-            border-left-color: #8db29a;
+            background: rgba(184, 156, 214, 0.1);
+            border-left-color: #b89cd6;
             transform: translateX(5px);
         }
 
         .contact-icon {
             width: 50px;
             height: 50px;
-            background: linear-gradient(135deg, #8db29a, #a8d5ba);
+            background: linear-gradient(135deg, #b89cd6, #d4c5e8);
             color: white;
             border-radius: 50%;
             display: flex;
@@ -217,7 +217,7 @@
             justify-content: center;
             font-size: 1.2rem;
             margin-right: 1.5rem;
-            box-shadow: 0 5px 15px rgba(141, 178, 154, 0.3);
+            box-shadow: 0 5px 15px rgba(184, 156, 214, 0.3);
         }
 
         .contact-details h4 {
@@ -234,14 +234,14 @@
         }
 
         .contact-details a {
-            color: #8db29a;
+            color: #b89cd6;
             text-decoration: none;
             font-weight: 500;
             transition: color 0.3s ease;
         }
 
         .contact-details a:hover {
-            color: #6fa085;
+            color: #9b7ec1;
         }
 
         /* Contact Form */
@@ -286,7 +286,7 @@
         .form-group input:focus,
         .form-group textarea:focus {
             outline: none;
-            border-color: #8db29a;
+            border-color: #b89cd6;
             background: white;
         }
 
@@ -297,7 +297,7 @@
 
         .submit-button {
             width: 100%;
-            background: linear-gradient(135deg, #8db29a, #a8d5ba);
+            background: linear-gradient(135deg, #b89cd6, #d4c5e8);
             color: white;
             padding: 1.2rem;
             border: none;
@@ -306,12 +306,12 @@
             font-weight: 600;
             cursor: pointer;
             transition: all 0.3s ease;
-            box-shadow: 0 8px 25px rgba(141, 178, 154, 0.3);
+            box-shadow: 0 8px 25px rgba(184, 156, 214, 0.3);
         }
 
         .submit-button:hover {
             transform: translateY(-3px);
-            box-shadow: 0 12px 35px rgba(141, 178, 154, 0.4);
+            box-shadow: 0 12px 35px rgba(184, 156, 214, 0.4);
         }
 
         .submit-button:disabled {
@@ -350,7 +350,7 @@
 
         .spinner {
             border: 3px solid #f3f3f3;
-            border-top: 3px solid #8db29a;
+            border-top: 3px solid #b89cd6;
             border-radius: 50%;
             width: 30px;
             height: 30px;
@@ -389,10 +389,10 @@
         }
 
         .address-highlight {
-            background: linear-gradient(135deg, rgba(141, 178, 154, 0.1), rgba(168, 213, 186, 0.05));
+            background: linear-gradient(135deg, rgba(184, 156, 214, 0.1), rgba(212, 197, 232, 0.05));
             padding: 1.5rem;
             border-radius: 15px;
-            border-left: 4px solid #8db29a;
+            border-left: 4px solid #b89cd6;
             font-size: 1.1rem;
             color: #2c3e50;
             font-weight: 500;
@@ -442,7 +442,7 @@
 .social-icon {
     width: 40px;
     height: 40px;
-    background: linear-gradient(135deg, #8db29a, #a8d5ba);
+    background: linear-gradient(135deg, #b89cd6, #d4c5e8);
     color: rgb(245, 245, 245);
     border-radius: 50%;
     display: flex;
@@ -604,7 +604,7 @@
 }
 
 .logo-image {
-    width: 90px;
+    width: 180px;
     height: 90px;
     margin-bottom: -10px;
     object-fit: contain;
@@ -670,7 +670,7 @@
     <nav>
         <div class="nav-container">
 <a href="sophrologue.html" class="logo">
-    <img src="logo Célia.png" alt="Célia Fernandes Sophrologue" class="logo-image">
+    <img src="favicon.jpg" alt="Célia Fernandes Sophrologue" class="logo-image">
 </a>
             <ul class="nav-links" id="navLinks">
                 <li><a href="sophrologue.html">Accueil</a></li>
@@ -839,18 +839,18 @@
     <footer style="background: #2c3e50; padding: 3rem 2rem 2rem;">
         <div style="max-width: 1200px; margin: 0 auto; display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 2rem; margin-bottom: 2rem;">
             <div>
-                <h3 style="color: #8db29a; margin-bottom: 1rem; font-size: 1.2rem;">Célia Fernandes</h3>
+                <h3 style="color: #b89cd6; margin-bottom: 1rem; font-size: 1.2rem;">Célia Fernandes</h3>
                 <p style="opacity: 0.9; line-height: 1.6; color: white;">Sophrologue spécialisée en confiance et estime de soi à Bayonne</p>
             </div>
             <div>
-                <h3 style="color: #8db29a; margin-bottom: 1rem; font-size: 1.2rem;">Contact</h3>
+                <h3 style="color: #b89cd6; margin-bottom: 1rem; font-size: 1.2rem;">Contact</h3>
                 <p style="opacity: 0.9; margin-bottom: 0.5rem; color: white;">📞 06 83 09 61 07 </p>
                 <p style="opacity: 0.9; margin-bottom: 0.5rem; color: white;">✉️ celiafsopro64@gmail.com</p>
                 <p style="opacity: 0.9; margin-bottom: 0.5rem; color: white;">📍 Bayonne & domicile</p>
             </div>
             <div>
 <div>
-    <h3 style="color: #8db29a; margin-bottom: 1rem; font-size: 1.2rem;">Horaires</h3>
+    <h3 style="color: #b89cd6; margin-bottom: 1rem; font-size: 1.2rem;">Horaires</h3>
     <p style="opacity: 0.9; margin-bottom: 0.5rem; color: white;">Lundi : 10h - 20h</p>
     <p style="opacity: 0.9; margin-bottom: 0.5rem; color: white;">Mardi : 10h30 - 14h30, 16h30 - 20h</p>
     <p style="opacity: 0.9; margin-bottom: 0.5rem; color: white;">Mercredi : 10h - 20h30</p>
