--- a/parcours.html
+++ b/parcours.html
@@ -31,7 +31,7 @@
             z-index: 1000;
             padding: 1rem 2rem;
             transition: all 0.3s ease;
-            border-bottom: 1px solid rgba(141, 178, 154, 0.2);
+            border-bottom: 1px solid rgba(186, 156, 220, 0.2);
         }
 
         .nav-container {
@@ -45,7 +45,7 @@
         .logo {
             font-size: 1.5rem;
             font-weight: 600;
-            color: #8db29a;
+            color: #b89cd6;
             text-decoration: none;
         }
 
@@ -64,7 +64,7 @@
         }
 
         .nav-links a:hover {
-            color: #8db29a;
+            color: #b89cd6;
         }
 
         .nav-links a::after {
@@ -74,7 +74,7 @@
             left: 0;
             width: 0;
             height: 2px;
-            background: linear-gradient(135deg, #8db29a, #a8d5ba);
+            background: linear-gradient(135deg, #b89cd6, #d4c5e8);
             transition: width 0.3s ease;
         }
 
@@ -92,7 +92,7 @@
         .hamburger span {
             width: 25px;
             height: 3px;
-            background: #8db29a;
+            background: #b89cd6;
             border-radius: 3px;
             transition: all 0.3s ease;
         }
@@ -100,7 +100,7 @@
         /* Hero Section */
         .hero {
             height: 70vh;
-            background: linear-gradient(135deg, rgba(141, 178, 154, 0.9), rgba(168, 213, 186, 0.8)), url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 600"><path d="M0,400 C300,300 600,500 1200,400 L1200,600 L0,600 Z" fill="rgba(255,255,255,0.1)"/><circle cx="150" cy="150" r="60" fill="rgba(255,255,255,0.05)"/><circle cx="900" cy="200" r="80" fill="rgba(255,255,255,0.08)"/><circle cx="600" cy="100" r="40" fill="rgba(255,255,255,0.06)"/></svg>');
+            background: linear-gradient(135deg, rgba(184, 156, 214, 0.9), rgba(212, 197, 232, 0.8)), url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 600"><path d="M0,400 C300,300 600,500 1200,400 L1200,600 L0,600 Z" fill="rgba(255,255,255,0.1)"/><circle cx="150" cy="150" r="60" fill="rgba(255,255,255,0.05)"/><circle cx="900" cy="200" r="80" fill="rgba(255,255,255,0.08)"/><circle cx="600" cy="100" r="40" fill="rgba(255,255,255,0.06)"/></svg>');
             background-size: cover;
             background-position: center;
             display: flex;
@@ -171,7 +171,7 @@
             left: 0;
             width: 100%;
             height: 5px;
-            background: linear-gradient(135deg, #8db29a, #a8d5ba);
+            background: linear-gradient(135deg, #b89cd6, #d4c5e8);
             border-radius: 20px 20px 0 0;
         }
 
@@ -194,10 +194,10 @@
         }
 
         .highlight {
-            background: linear-gradient(135deg, rgba(141, 178, 154, 0.1), rgba(168, 213, 186, 0.05));
+            background: linear-gradient(135deg, rgba(184, 156, 214, 0.1), rgba(212, 197, 232, 0.05));
             padding: 1.5rem;
             border-radius: 10px;
-            border-left: 4px solid #8db29a;
+            border-left: 4px solid #b89cd6;
             font-style: italic;
             margin: 2rem 0;
         }
@@ -217,7 +217,7 @@
             align-items: center;
             justify-content: center;
             box-shadow: 0 20px 50px rgba(0,0,0,0.15);
-            border: 4px solid #8db29a;
+            border: 4px solid #b89cd6;
             margin-bottom: 2rem;
         }
 
@@ -233,7 +233,7 @@
         .profile-quote::before {
             content: '"';
             font-size: 4rem;
-            color: #8db29a;
+            color: #b89cd6;
             position: absolute;
             top: -10px;
             left: 20px;
@@ -250,7 +250,7 @@
 
         .quote-author {
             font-weight: 600;
-            color: #8db29a;
+            color: #b89cd6;
         }
 
         /* Values Section */
@@ -279,7 +279,7 @@
             transform: translateX(-50%);
             width: 80px;
             height: 3px;
-            background: linear-gradient(135deg, #8db29a, #a8d5ba);
+            background: linear-gradient(135deg, #b89cd6, #d4c5e8);
             border-radius: 2px;
         }
 
@@ -308,7 +308,7 @@
             left: 0;
             width: 100%;
             height: 4px;
-            background: linear-gradient(135deg, #8db29a, #a8d5ba);
+            background: linear-gradient(135deg, #b89cd6, #d4c5e8);
         }
 
         .value-card:hover {
@@ -319,7 +319,7 @@
         .value-icon {
             width: 70px;
             height: 70px;
-            background: linear-gradient(135deg, #8db29a, #a8d5ba);
+            background: linear-gradient(135deg, #b89cd6, #d4c5e8);
             color: white;
             border-radius: 50%;
             display: flex;
@@ -327,7 +327,7 @@
             justify-content: center;
             font-size: 2rem;
             margin: 0 auto 1.5rem;
-            box-shadow: 0 8px 25px rgba(141, 178, 154, 0.3);
+            box-shadow: 0 8px 25px rgba(184, 156, 214, 0.3);
         }
 
         .value-card h3 {
@@ -346,7 +346,7 @@
         .cta-section {
             text-align: center;
             padding: 4rem 2rem;
-            background: linear-gradient(135deg, rgba(141, 178, 154, 0.1), rgba(168, 213, 186, 0.05));
+            background: linear-gradient(135deg, rgba(184, 156, 214, 0.1), rgba(212, 197, 232, 0.05));
             border-radius: 20px;
             margin: 4rem 0;
         }
@@ -369,20 +369,20 @@
 
         .cta-button {
             display: inline-block;
-            background: linear-gradient(135deg, #8db29a, #a8d5ba);
+            background: linear-gradient(135deg, #b89cd6, #d4c5e8);
             color: white;
             padding: 1.2rem 2.5rem;
             text-decoration: none;
             border-radius: 50px;
             font-weight: 600;
             transition: all 0.3s ease;
-            box-shadow: 0 8px 25px rgba(141, 178, 154, 0.3);
+            box-shadow: 0 8px 25px rgba(184, 156, 214, 0.3);
             margin: 0 0.5rem;
         }
 
         .cta-button:hover {
             transform: translateY(-3px);
-            box-shadow: 0 12px 35px rgba(141, 178, 154, 0.4);
+            box-shadow: 0 12px 35px rgba(184, 156, 214, 0.4);
         }
 
         /* Animations */
@@ -497,7 +497,7 @@
 }
 
 .logo-image {
-    width: 90px;
+    width: 180px;
     height: 90px;
     margin-bottom: -10px;
     object-fit: contain;
@@ -522,7 +522,7 @@
     <nav>
         <div class="nav-container">
 <a href="sophrologue.html" class="logo">
-    <img src="logo Célia.png" alt="Célia Fernandes Sophrologue" class="logo-image">
+    <img src="favicon.jpg" alt="Célia Fernandes Sophrologue" class="logo-image">
 </a>
             <ul class="nav-links" id="navLinks">
                 <li><a href="sophrologue.html">Accueil</a></li>
@@ -577,7 +577,7 @@
                 <div class="about-image">
                     <img src="celia.jpg" alt="Célia Fernandes, sophrologue à Bayonne" 
                         style="width: 300px; height: 400px; object-fit: cover; border-radius: 20px; 
-                        box-shadow: 0 15px 35px rgba(0,0,0,0.1); border: 3px solid #8db29a;">
+                        box-shadow: 0 15px 35px rgba(0,0,0,0.1); border: 3px solid #b89cd6;">
                 </div>
                 <div class="profile-quote">
                     <p class="quote-text">Ma plus grande joie ? Voir les étoiles revenir dans vos yeux quand vous vous reconnectez à qui vous êtes vraiment.</p>
@@ -636,18 +636,18 @@
            <footer style="background: #2c3e50; padding: 3rem 2rem 2rem;">
         <div style="max-width: 1200px; margin: 0 auto; display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 2rem; margin-bottom: 2rem;">
             <div>
-                <h3 style="color: #8db29a; margin-bottom: 1rem; font-size: 1.2rem;">Célia Fernandes</h3>
+                <h3 style="color: #b89cd6; margin-bottom: 1rem; font-size: 1.2rem;">Célia Fernandes</h3>
                 <p style="opacity: 0.9; line-height: 1.6; color: white;">Sophrologue spécialisée en confiance et estime de soi à Bayonne</p>
             </div>
             <div>
-                <h3 style="color: #8db29a; margin-bottom: 1rem; font-size: 1.2rem;">Contact</h3>
+                <h3 style="color: #b89cd6; margin-bottom: 1rem; font-size: 1.2rem;">Contact</h3>
                 <p style="opacity: 0.9; margin-bottom: 0.5rem; color: white;">📞 06 83 09 61 07 </p>
                 <p style="opacity: 0.9; margin-bottom: 0.5rem; color: white;">✉️ celiafsopro64@gmail.com</p>
                 <p style="opacity: 0.9; margin-bottom: 0.5rem; color: white;">📍 Bayonne & domicile</p>
             </div>
             <div>
 <div>
-    <h3 style="color: #8db29a; margin-bottom: 1rem; font-size: 1.2rem;">Horaires</h3>
+    <h3 style="color: #b89cd6; margin-bottom: 1rem; font-size: 1.2rem;">Horaires</h3>
     <p style="opacity: 0.9; margin-bottom: 0.5rem; color: white;">Lundi : 10h - 20h</p>
     <p style="opacity: 0.9; margin-bottom: 0.5rem; color: white;">Mardi : 10h30 - 14h30, 16h30 - 20h</p>
     <p style="opacity: 0.9; margin-bottom: 0.5rem; color: white;">Mercredi : 10h - 20h30</p>
