--- a/sophrologue.html
+++ b/sophrologue.html
@@ -12,7 +12,7 @@
     <nav>
         <div class="nav-container">
 <a href="sophrologue.html" class="logo">
-    <img src="logo Célia.png" alt="Célia Fernandes Sophrologue" class="logo-image">
+    <img src="favicon.jpg" alt="Célia Fernandes Sophrologue" class="logo-image">
 </a>
             <ul class="nav-links" id="navLinks">
                 <li><a href="sophrologue.html">Accueil</a></li>
@@ -57,7 +57,7 @@
             <div class="about-image">
                 <img src="celia.jpg" alt="Célia Fernandes, sophrologue à Bayonne" 
                     style="width: 300px; height: 400px; object-fit: cover; border-radius: 20px; 
-                        box-shadow: 0 15px 35px rgba(0,0,0,0.1); border: 3px solid #8db29a;">
+                        box-shadow: 0 15px 35px rgba(0,0,0,0.1); border: 3px solid #b89cd6;">
             </div>
         </div>
     </section>
@@ -94,24 +94,7 @@
             <p style="font-size: 1.2rem; color: #555; margin-bottom: 2rem;">
                 Prendre rendez-vous est un acte de courage. Le premier pas vers la personne que vous êtes vraiment.
             </p>
-            <div class="contact-info">
-                <div class="contact-item">
-                    <div class="contact-icon">📍</div>
-                    <h3>Cabinet</h3>
-                    <p>Bayonne<br>ou à votre domicile</p>
-                </div>
-                <div class="contact-item">
-                    <div class="contact-icon">📞</div>
-                    <h3>Téléphone</h3>
-                    <p>Appelez-moi pour<br>un premier échange</p>
-                </div>
-                <div class="contact-item">
-                    <div class="contact-icon">💌</div>
-                    <h3>Email</h3>
-                    <p>Écrivez-moi pour<br>toute question</p>
-                </div>
-            </div>
-            <a href="#" class="cta-button" style="margin-top: 2rem;">Je vous attends avec bienveillance</a>
+            <a href="contact.html" class="cta-button" style="margin-top: 2rem;">Je vous attends avec bienveillance <br> cliquez-moi</a>
         </div>
     </section>
     
@@ -165,18 +148,18 @@
     <footer>
         <div style="max-width: 1200px; margin: 0 auto; display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 2rem; margin-bottom: 2rem;">
             <div>
-                <h3 style="color: #8db29a; margin-bottom: 1rem; font-size: 1.2rem;">Célia Fernandes</h3>
+                <h3 style="color: #b89cd6; margin-bottom: 1rem; font-size: 1.2rem;">Célia Fernandes</h3>
                 <p style="opacity: 0.9; line-height: 1.6;">Sophrologue spécialisée en confiance et estime de soi à Bayonne</p>
             </div>
             <div>
-                <h3 style="color: #8db29a; margin-bottom: 1rem; font-size: 1.2rem;">Contact</h3>
+                <h3 style="color: #b89cd6; margin-bottom: 1rem; font-size: 1.2rem;">Contact</h3>
                 <p style="opacity: 0.9; margin-bottom: 0.5rem;">📞 06 83 09 61 07 </p>
                 <p style="opacity: 0.9; margin-bottom: 0.5rem;">✉️ celiafsopro64@gmail.com</p>
                 <p style="opacity: 0.9; margin-bottom: 0.5rem;">📍 Bayonne & domicile</p>
             </div>
             <div>
 <div>
-    <h3 style="color: #8db29a; margin-bottom: 1rem; font-size: 1.2rem;">Horaires</h3>
+    <h3 style="color: #b89cd6; margin-bottom: 1rem; font-size: 1.2rem;">Horaires</h3>
     <p style="opacity: 0.9; margin-bottom: 0.5rem; color: white;">Lundi : 10h - 20h</p>
     <p style="opacity: 0.9; margin-bottom: 0.5rem; color: white;">Mardi : 10h30 - 14h30, 16h30 - 20h</p>
     <p style="opacity: 0.9; margin-bottom: 0.5rem; color: white;">Mercredi : 10h - 20h30</p>
