--- a/sophrologue.html
+++ b/sophrologue.html
@@ -33,7 +33,7 @@
     <section id="accueil" class="hero">
         <div class="hero-content">
             <h1>Retrouvez votre lumière intérieure</h1>
-            <p class="hero-subtitle"> Célia Fernandes <br> Sophrologue à Bayonne • Confiance & Estime de soi</p>
+            <p class="hero-subtitle"> <strong>Célia Fernandes</strong> <br> Sophrologue à Bayonne • Confiance & Estime de soi</p>
             <p class="hero-description">
                 Vous êtes submergé par les épreuves de la vie ? Renouez avec la confiance et l'estime de soi grâce à la sophrologie, en cabinet ou à votre domicile.
             </p>
