--- a/contact.html
+++ b/contact.html
@@ -701,7 +701,7 @@
         <!-- Contact Intro -->
         <div class="contact-intro fade-in">
             <h2>Prendre le premier pas</h2>
-            <p>Si vous sentez que c'est le moment de faire quelque chose pour vous, je suis là. Contactez-moi avec vos mots, votre ressenti. Je répondrai avec douceur et disponibilité. Mon but est que vous vous sentiez accueilli(e), dès ce premier contact.</p>
+            <p>Osez vous choisir aujourd’hui, en faisant ce premier pas vers vous, vers votre mieux-être. En sophrologie, chaque pas compte : un pas vers soi, un pas ensemble, pour avancer en conscience, retrouver l'équilibre et accueillir pleinement qui vous êtes. <strong>Contactez Moi</strong></strong></p>
         </div>
 
 
@@ -1025,6 +1025,7 @@
 </body>
 
 </html>
+
 
 
 
