--- a/sophrologue.html
+++ b/sophrologue.html
@@ -94,6 +94,7 @@
             <p style="font-size: 1.2rem; color: #555; margin-bottom: 2rem;">
                 Prendre rendez-vous est un acte de courage. Le premier pas vers la personne que vous êtes vraiment.
             </p>
+            <p>Il y a possibilité de bénéficier de séances de sophrologie à <strong>domicile</strong> dans un rayon de <strong>15 à 20 kilomètre</strong>, pour un accompagnement personnalisé, directement chez vous, en toute sérénité.</p>
             <a href="contact.html" class="cta-button" style="margin-top: 2rem;">Je vous attends avec bienveillance <br> cliquez-moi</a>
         </div>
     </section>
@@ -247,4 +248,5 @@
 </body>
 
 </html>
+
 
