--- a/sophrologue.html
+++ b/sophrologue.html
@@ -95,7 +95,7 @@
                 Prendre rendez-vous est un acte de courage. Le premier pas vers la personne que vous êtes vraiment.
             </p>
             <p>Il y a possibilité de bénéficier de séances de sophrologie à <strong>domicile</strong> dans un rayon de <strong>15 à 20 kilomètre</strong>, pour un accompagnement personnalisé, directement chez vous, en toute sérénité.</p>
-            <a href="contact.html" class="cta-button" style="margin-top: 2rem;">Je vous attends avec bienveillance <br> cliquez-moi</a>
+            <a href="contact.html" class="cta-button" style="margin-top: 2rem;">Je vous attends avec bienveillance <br> Cliquez-ici</a>
         </div>
     </section>
     
@@ -248,5 +248,6 @@
 </body>
 
 </html>
+
 
 
