--- a/contact.html
+++ b/contact.html
@@ -700,7 +700,7 @@
         
         <!-- Contact Intro -->
         <div class="contact-intro fade-in">
-            <h2>Prendre le premier pas</h2>
+            <h2>Faites le premier pas</h2>
             <p>Osez vous choisir aujourd’hui, en faisant ce premier pas vers vous, vers votre mieux-être. En sophrologie, chaque pas compte : un pas vers soi, un pas ensemble, pour avancer en conscience, retrouver l'équilibre et accueillir pleinement qui vous êtes. <strong>Contactez Moi</strong></strong></p>
         </div>
 
@@ -1025,6 +1025,7 @@
 </body>
 
 </html>
+
 
 
 
