--- a/parcours.html
+++ b/parcours.html
@@ -528,6 +528,7 @@
                 <li><a href="sophrologue.html">Accueil</a></li>
                 <li><a href="a_quoi_attendre.html">À quoi s'attendre</a></li>
                 <li><a href="parcours.html">Mon Parcours</a></li>
+                <li><a href="mes_offres.html">Mes Offres</a></li>
                 <li><a href="events.html">Vos Questions</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -758,6 +759,7 @@ Comme pour l’apprentissage d’un instrument, je vous montre les notes, mais c
 </body>
 
 </html>
+
 
 
 
