--- a/sophrologue.html
+++ b/sophrologue.html
@@ -18,6 +18,7 @@
                 <li><a href="sophrologue.html">Accueil</a></li>
                 <li><a href="a_quoi_attendre.html">À quoi s'attendre</a></li>
                 <li><a href="parcours.html">Mon Parcours</a></li>
+                <li><a href="mes_offres.html">Mes Offres</a></li>
                 <li><a href="events.html">Vos Questions</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -249,4 +250,5 @@
 </body>
 
 </html>
+
 
