--- a/a_quoi_attendre.html
+++ b/a_quoi_attendre.html
@@ -644,7 +644,7 @@
                 <p style="opacity: 0.9; margin-bottom: 0.5rem; color: white;">📞 06 83 09 61 07 </p>
                 <p style="opacity: 0.9; margin-bottom: 0.5rem; color: white;">✉️ celiafsopro64@gmail.com</p>
                 <p style="opacity: 0.9; margin-bottom: 0.5rem; color: white;">📍 Bayonne & domicile & 
- <br> Viso Conférence</p>
+ <br> Visio Conférence</p>
             </div>
             <div>
 <div>
@@ -774,4 +774,5 @@
 </body>
 
 </html>
+
 
