--- a/contact.html
+++ b/contact.html
@@ -847,7 +847,7 @@
                 <h3 style="color: #b89cd6; margin-bottom: 1rem; font-size: 1.2rem;">Contact</h3>
                 <p style="opacity: 0.9; margin-bottom: 0.5rem; color: white;">📞 06 83 09 61 07 </p>
                 <p style="opacity: 0.9; margin-bottom: 0.5rem; color: white;">✉️ celiafsopro64@gmail.com</p>
-                <p style="opacity: 0.9; margin-bottom: 0.5rem; color: white;">📍 Bayonne & domicile</p>
+                <p style="opacity: 0.9; margin-bottom: 0.5rem; color: white;">📍 Bayonne & domicile & <br>Viso Conférence</p>
             </div>
             <div>
 <div>
@@ -1026,6 +1026,7 @@
 </body>
 
 </html>
+
 
 
 
