--- a/events.html
+++ b/events.html
@@ -614,7 +614,7 @@
                 <p style="opacity: 0.9; margin-bottom: 0.5rem; color: white;">📞 06 83 09 61 07 </p>
                 <p style="opacity: 0.9; margin-bottom: 0.5rem; color: white;">✉️ celiafsopro64@gmail.com</p>
                 <p style="opacity: 0.9; margin-bottom: 0.5rem; color: white;">📍 Bayonne & domicile & 
- <br> Viso Conférence</p>
+ <br> Visio Conférence</p>
             </div>
 <div>
     <h3 style="color: #b89cd6; margin-bottom: 1rem; font-size: 1.2rem;">Horaires</h3>
@@ -741,4 +741,5 @@
 </body>
 
 </html>
+
 
