--- a/mes_offres.html
+++ b/mes_offres.html
@@ -1010,7 +1010,7 @@
                 <h3>Contact</h3>
                 <p>📞 06 83 09 61 07</p>
                 <p>✉️ celiafsopro64@gmail.com</p>
-                <p>📍 Bayonne & domicile & Viso Conférence</p>
+                <p>📍 Bayonne & domicile & Visio Conférence</p>
             </div>
             <div>
                 <h3>Horaires</h3>
@@ -1134,4 +1134,5 @@
         });
     </script>
 </body>
+
 </html>
