--- a/parcours.html
+++ b/parcours.html
@@ -656,7 +656,7 @@ Comme pour l’apprentissage d’un instrument, je vous montre les notes, mais c
                 <p style="opacity: 0.9; margin-bottom: 0.5rem; color: white;">📞 06 83 09 61 07 </p>
                 <p style="opacity: 0.9; margin-bottom: 0.5rem; color: white;">✉️ celiafsopro64@gmail.com</p>
                 <p style="opacity: 0.9; margin-bottom: 0.5rem; color: white;">📍 Bayonne & domicile & 
- <br> Viso Conférence</p>
+ <br> Visio Conférence</p>
             </div>
             <div>
 <div>
@@ -759,6 +759,7 @@ Comme pour l’apprentissage d’un instrument, je vous montre les notes, mais c
 </body>
 
 </html>
+
 
 
 
