--- a/sophrologue.html
+++ b/sophrologue.html
@@ -158,7 +158,7 @@
                 <h3 style="color: #b89cd6; margin-bottom: 1rem; font-size: 1.2rem;">Contact</h3>
                 <p style="opacity: 0.9; margin-bottom: 0.5rem;">📞 06 83 09 61 07 </p>
                 <p style="opacity: 0.9; margin-bottom: 0.5rem;">✉️ celiafsopro64@gmail.com</p>
-                <p style="opacity: 0.9; margin-bottom: 0.5rem;">📍 Bayonne & domicile & <br> Viso Conférence</p>
+                <p style="opacity: 0.9; margin-bottom: 0.5rem;">📍 Bayonne & domicile & <br> Visio Conférence</p>
             </div>
             <div>
 <div>
@@ -250,5 +250,6 @@
 </body>
 
 </html>
+
 
 
