--- a/mes_offres.html
+++ b/mes_offres.html
@@ -825,7 +825,7 @@
 
                         <h4 class="section-subtitle">🌼 Résultats :</h4>
                         <ul>
-                            <li>Estime et confiance renforcées</li>
+                            <li>Estime et confiance en soi</li>
                             <li>Meilleure gestion des émotions</li>
                             <li>Apaisement du mental</li>
                             <li>Sentiment d'équilibre et de légèreté</li>
@@ -1136,3 +1136,4 @@
 </body>
 
 </html>
+
