--- a/a_quoi_attendre.html
+++ b/a_quoi_attendre.html
@@ -624,7 +624,7 @@
 
         <!-- CTA Section -->
         <div class="cta-section fade-in">
-            <h2>Prête à commencer ce chemin ensemble ?</h2>
+            <h2>Prêt(e) à commencer ce chemin ensemble ?</h2>
             <p style="font-size: 1.1rem; color: #555; margin-bottom: 2rem;">
                 Je vous attends avec bienveillance pour vous accompagner vers votre mieux-être.
             </p>
@@ -774,5 +774,6 @@
 </body>
 
 </html>
+
 
 
