--- a/mes_offres.html
+++ b/mes_offres.html
@@ -935,7 +935,7 @@
         <!-- Tableau comparatif -->
         <div class="fade-in" style="margin-top: 4rem;">
             <h2 style="text-align: center; color: #2c3e50; margin-bottom: 2rem; font-weight: 400;">💎 Résumé comparatif des offres</h2>
-            <p style="font-size: 1.1rem; color: #555; margin-bottom: 2.5rem; max-width: 600px; margin-left: auto; margin-right: auto;"> Glisser de droite a gauche pour voir la totalité du tableau (mobile) </p>
+            <p style="text-align: center; font-size: 1.1rem; color: #555; margin-bottom: 2.5rem; max-width: 600px; margin-left: auto; margin-right: auto;"> Glisser de droite a gauche pour voir la totalité du tableau (mobile) </p>
             <table class="comparison-table">
                 <thead>
                     <tr>
@@ -1137,6 +1137,7 @@
 </body>
 
 </html>
+
 
 
 
