--- a/mes_offres.html
+++ b/mes_offres.html
@@ -740,7 +740,7 @@
             <!-- RETROUVER SON SOUFFLE -->
             <div class="offer-item fade-in">
                 <div class="offer-header-click" onclick="toggleOffer(this)">
-                    <h3>🌸 Retrouver Son Souffle — 6 semaines</h3>
+                    <h3>🌸 Retrouver Son Souffle — 6 séances</h3>
                     <div class="offer-icon">+</div>
                 </div>
                 <div class="offer-content">
@@ -777,7 +777,7 @@
                             </div>
                             <div class="info-box">
                                 <strong>📅 Durée</strong>
-                                6 semaines
+                                6 séances
                             </div>
                             <div class="info-box">
                                 <strong>📍 Lieu</strong>
@@ -801,7 +801,7 @@
             <!-- RENAÎTRE EN DOUCEUR -->
             <div class="offer-item fade-in">
                 <div class="offer-header-click" onclick="toggleOffer(this)">
-                    <h3>🌿 Renaître en Douceur — 8 à 9 semaines</h3>
+                    <h3>🌿 Renaître en Douceur — 8 à 9 séances</h3>
                     <div class="offer-icon">+</div>
                 </div>
                 <div class="offer-content">
@@ -838,7 +838,7 @@
                             </div>
                             <div class="info-box">
                                 <strong>📅 Durée</strong>
-                                8 à 9 semaines
+                                8 à 9 séances
                             </div>
                             <div class="info-box">
                                 <strong>📍 Lieu</strong>
@@ -957,14 +957,14 @@
                     <tr>
                         <td><strong>Retrouver son souffle</strong></td>
                         <td>Apaisement du stress et vitalité</td>
-                        <td>6 semaines</td>
+                        <td>6 séances</td>
                         <td>Séance 0 + 4 + clôture</td>
                         <td><strong>490 €</strong></td>
                     </tr>
                     <tr>
                         <td><strong>Renaître en douceur</strong></td>
                         <td>Confiance et estime de soi</td>
-                        <td>8–9 semaines</td>
+                        <td>8–9 séances</td>
                         <td>Séance 0 + 5 + clôture</td>
                         <td><strong>560 €</strong></td>
                     </tr>
@@ -1137,6 +1137,7 @@
 </body>
 
 </html>
+
 
 
 
