--- a/mes_offres.html
+++ b/mes_offres.html
@@ -30,7 +30,7 @@
             backdrop-filter: blur(15px);
             z-index: 1000;
             padding: 1rem 2rem;
-            transition: all 0.3s ease;
+            transitin: all 0.3s ease;
             border-bottom: 1px solid rgba(186, 156, 220, 0.2);
         }
 
@@ -958,21 +958,21 @@
                         <td><strong>Retrouver son souffle</strong></td>
                         <td>Apaisement du stress et vitalité</td>
                         <td>6 séances</td>
-                        <td>Séance 0 + 4 + clôture</td>
+                        <td>Séance 1 + 4 + clôture</td>
                         <td><strong>490 €</strong></td>
                     </tr>
                     <tr>
                         <td><strong>Renaître en douceur</strong></td>
                         <td>Confiance et estime de soi</td>
                         <td>8–9 séances</td>
-                        <td>Séance 0 + 5 + clôture</td>
+                        <td>Séance 1 + 5 + clôture</td>
                         <td><strong>560 €</strong></td>
                     </tr>
                     <tr>
                         <td><strong>Rayonner à nouveau</strong></td>
                         <td>Transformation complète</td>
                         <td>3 mois</td>
-                        <td>Séance 0 + 7 + clôture</td>
+                        <td>Séance 1 + 7 + clôture</td>
                         <td><strong>630 €</strong></td>
                     </tr>
                 </tbody>
@@ -1137,6 +1137,7 @@
 </body>
 
 </html>
+
 
 
 
