--- a/contact.html
+++ b/contact.html
@@ -750,7 +750,7 @@
                     <div class="contact-icon">🏠</div>
                     <div class="contact-details">
                         <h4>Consultations</h4>
-                        <p>En cabinet ou à domicile<br>Sur rendez-vous uniquement</p>
+                        <p>En cabinet, à domicile ou en visio conférence<br>Sur rendez-vous uniquement</p>
                     </div>
                 </div>
 
@@ -1026,6 +1026,7 @@
 </body>
 
 </html>
+
 
 
 
